--- a/SwiftTransformer/Localizable.xcstrings
+++ b/SwiftTransformer/Localizable.xcstrings
@@ -12,6 +12,7 @@
       }
     },
     "Text Example" : {
+      "extractionState" : "stale",
       "localizations" : {
         "fr" : {
           "stringUnit" : {
